<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_aule"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_aule" />
        <item
            android:id="@+id/nav_classe"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_classe" />

        <item
            android:id="@+id/nav_visori"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_visori" />

        <item
            android:id="@+id/nav_risorse"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_risorse" />

        <item
            android:id="@+id/nav_utenti"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_utenti" />

        <item
            android:id="@+id/nav_diagnosi"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_diagnosi" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_logout" />

    </group>
</menu>