<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="it.vrscuola.scuola.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="it.vrscuola.scuola.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="it.vrscuola.scuola.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_classe"
        android:name="it.vrscuola.scuola.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_classe"
        tools:layout="@layout/fragment_slideshow" />

     <fragment
            android:id="@+id/nav_visori"
            android:name="it.vrscuola.scuola.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_visori"
            tools:layout="@layout/fragment_slideshow" />

    <fragment
            android:id="@+id/nav_risorse"
            android:name="it.vrscuola.scuola.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_risorse"
            tools:layout="@layout/fragment_slideshow" />

     <fragment
        android:id="@+id/nav_utenti"
        android:name="it.vrscuola.scuola.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_utenti"
        tools:layout="@layout/fragment_slideshow" />

     <fragment
        android:id="@+id/nav_diagnosi"
        android:name="it.vrscuola.scuola.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_diagnosi"
        tools:layout="@layout/fragment_slideshow" />


</navigation>